ajustes de tareas y proyecto

--- a/front/src/app/shared/navbar/navbar.component.html
+++ b/front/src/app/shared/navbar/navbar.component.html
@@ -1,24 +1,17 @@
 <nav class="navbar">
   <div class="navbar-left">
-    <a routerLink="/" class="logo">🛍️ Mi Tienda</a>
+  <a href="#" (click)="goToHomeOrDashboard($event)" class="logo">Gestión de proyectos</a>
   </div>
 
   <div class="navbar-right">
     <ng-container *ngIf="!isLoggedIn">
-      <a routerLink="/login">Iniciar sesión</a>
+      <a routerLink="/">Iniciar sesión</a>
       <a routerLink="/register">Registrarse</a>
     </ng-container>
 
     <ng-container *ngIf="isLoggedIn">
-      <a *ngIf="isAdmin" routerLink="/admin/products">Administrar productos</a>
 
-      <ng-container *ngIf="isUser">
-        <a routerLink="/cart">
-          🛒 Carrito
-          <span *ngIf="cartCount > 0">({{ cartCount }})</span>
-        </a>
-        <a routerLink="/orders">Mis compras</a>
-      </ng-container>
+        <a routerLink="/projects">Administrar proyectos</a>
 
       <a (click)="logout()" style="cursor: pointer;">Cerrar sesión</a>
     </ng-container>
