--- a/front/src/app/pages/projects/project-list/project-list.component.html
+++ b/front/src/app/pages/projects/project-list/project-list.component.html
@@ -4,28 +4,30 @@
     <a routerLink="/projects/new" class="new-project-btn">➕ Nuevo Proyecto</a>
   </div>
 
-  <table class="projects-table">
-    <thead>
-      <tr>
-        <th>Nombre</th>
-        <th>Descripción</th>
-        <th>Estado</th>
-        <th>Acciones</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let p of projects">
-        <td>{{ p.name }}</td>
-        <td>{{ p.description }}</td>
-        <td>
-          <span [ngClass]="'badge ' + p.state.toLowerCase()">{{ p.state }}</span>
-        </td>
-        <td>
-          <a [routerLink]="['/projects/edit', p.id]" class="btn edit">✏️ Editar</a>
-          <a [routerLink]="['/projects', p.id, 'tasks']" class="btn task">📌 Tareas</a>
-          <button (click)="deleteProject(p.id!)" class="btn delete">🗑️ Eliminar</button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+  <div class="table-wrapper">
+    <table class="projects-table">
+      <thead>
+        <tr>
+          <th>Nombre</th>
+          <th>Descripción</th>
+          <th>Estado</th>
+          <th>Acciones</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let p of projects">
+          <td data-label="Nombre">{{ p.name }}</td>
+          <td data-label="Descripción">{{ p.description }}</td>
+          <td data-label="Estado">
+            <span [ngClass]="'badge ' + p.state.toLowerCase().replace(' ', '_')">{{ p.state }}</span>
+          </td>
+          <td data-label="Acciones" class="actions">
+            <a [routerLink]="['/projects/edit', p.id]" class="btn edit">✏️ Editar</a>
+            <a [routerLink]="['/projects', p.id, 'tasks']" class="btn task">📌 Tareas</a>
+            <button (click)="deleteProject(p.id!)" class="btn delete">🗑️ Eliminar</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
